--- a/RapidTest/appsettings.json
+++ b/RapidTest/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=RapidTest;MultipleActiveResultSets=true;User Id=sa;Password=shc@1234"
+    "DefaultConnection": "Server=.;Database=RapidTest2;MultipleActiveResultSets=true;User Id=sa;Password=shc@1234"
   },
   "JwtSettings": {
     "Secret": "PHAM TIEN SY",
