--- a/App/package.json
+++ b/App/package.json
@@ -19,8 +19,7 @@
   "license": "MIT",
   "scripts": {
     "start": "ng serve --open --host 10.4.5.174 --port 62 --disable-host-check",
-    "dev_henry": "ng serve --port 62 --disable-host-check",
-    "leo": "ng serve --open --host 10.4.5.132 --port 1005 --disable-host-check",
+    "dev": "ng serve --port 62 --disable-host-check",
     "ng": "ng",
     "postinstall": "ngcc --properties es2015 browser module main --first-only",
     "build": "ng build --prod --aot --build-optimizer --common-chunk --vendor-chunk --optimization --progress",
